Merged and refactored with migration from TestNG to JUnit version