@@ -24,14 +24,16 @@
  */
 package org.bitrepository.protocol.bus;
 
+import org.bitrepository.SuiteInfoParameterResolver;
 import org.bitrepository.bitrepositorymessages.AlarmMessage;
 import org.bitrepository.protocol.IntegrationTest;
 import org.bitrepository.protocol.message.ExampleMessageFactory;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.bitrepository.protocol.utils.AllureTestUtils.addDescription;
 import static org.bitrepository.protocol.utils.AllureTestUtils.addStep;
@@ -39,6 +41,7 @@ import static org.bitrepository.protocol.utils.AllureTestUtils.addStep;
 /**
  * Class for testing the interface with the message bus.
  */
+@ExtendWith(SuiteInfoParameterResolver.class)
 public class GeneralMessageBusTest extends IntegrationTest {
     protected static MessageReceiver collectionReceiver;
 
@@ -51,8 +54,8 @@ public class GeneralMessageBusTest extends IntegrationTest {
 
     @AfterEach
     public void tearDown() {
-        messageBus.setComponentFilter(Arrays.asList(new String[]{}));
-        messageBus.setCollectionFilter(Arrays.asList(new String[]{}));
+        messageBus.setComponentFilter(List.of());
+        messageBus.setCollectionFilter(List.of());
     }
 
     @Test
